--- a/Manuscript.Rmd
+++ b/Manuscript.Rmd
@@ -184,7 +184,7 @@ We developed MAREA in R version 3.4.2 and R Studio 1.1.383 [@rcore_2017] using t
 
 MAREA is designed as a 6-step process, divided in tabs that appear upon launching the app. The first tab introduces the app and summarizes the evaluation process. Then, the user selects management objectives, which MAREA automatically matches to appropriate indicators, based on Table 2. Users can also select and deselect indicators based on their interests and data availability by "clicking" on the check-boxes in MAREA. The user can then load data on one or more reserves, using standard \*.csv text files; sample datasets are provided within MAREA. Once data have been loaded, MAREA identifies all reserves in the data, and lets the user select the reserve to be evaluated. At this point, the user can also specify the year of implementation of the reserve, reserve dimensions, and indicate target species that are of particular management interest. MAREA provides the user with a section to confirm that all the decisions made leading up to that point are correct. Once the user has confirmed all input data, objectives, and other information, MAREA performs the formal program evaluation analyses discussed above. For a typical data set, the automated analysis step takes less than one second. Finally, the user is taken to the results tab where all results are presented in a simple format. The user can also download a more comprehensive technical report produced in \*.pdf  format.
 
-The first output is a color–coded scorecard intended to provide a general overview of the effectiveness of the reserve. The scorecard provides a global score for the reserve, a general score for each category of indicators, and an individual score for each indicator. The global and category–level scores are determined by the percentage of positive indicators, overall and for each category, respectively. For numeric biological indicators (all but B5), the color is defined by the sign of the interaction term coefficient ($\beta_2$) in eq. 1. For socioeconomic indicators, colors are assigned based on the direction of the slope ($\beta_1$) in eq. 3. Red, yellow, and green are used for $\beta_i<0$, $\beta_i = 0$, and $\beta_i>0$, respectively. The intensity of the color is defined by the significance of the coefficient, testing the null hypothesis of no change (*i.e.* $H_0: \beta_i = 0$) with a Student’s t-test. Cutoff values are $p < 0.05$ and $p < 0.1$. Thus, even in a case where $\beta_i > 0$, if the coefficient is not significant by standard measures (*i.e. * $p>0.1$), the indicator will be assigned a yellow color. A legend (Fig. 2) is provided within the scorecard to aid in the interpretation of these results. Governance indicators are represented simply by red or green. The color is defined based on what literature shows to be a negative (red) or positive (green) factor for a reserve (S3 Table). For example, if the perceived degree of illegal fishing is high, this indicator will be assigned a red color. However, due to the nature of some governance indicators, which require the user to provide a narrative, only some indicators are presented in the scorecard (although all are included in the technical report).
+The first output is a color–coded scorecard intended to provide a general overview of the effectiveness of the reserve. The scorecard provides a global score for the reserve, a general score for each category of indicators, and an individual score for each indicator. The global and category–level scores are determined by the percentage of positive indicators, overall and for each category, respectively. For numeric biological indicators, the color is defined by the sign of the interaction term coefficient ($\beta_2$) in eq. 1. For socioeconomic indicators, colors are assigned based on the direction of the slope ($\beta_1$) in eq. 3. Red, yellow, and green are used for $\beta_i<0$, $\beta_i = 0$, and $\beta_i>0$, respectively. The intensity of the color is defined by the significance of the coefficient, testing the null hypothesis of no change (*i.e.* $H_0: \beta_i = 0$) with a Student’s t-test. Cutoff values are $p < 0.05$ and $p < 0.1$. Thus, even in a case where $\beta_i > 0$, if the coefficient is not significant by standard measures (*i.e. * $p>0.1$), the indicator will be assigned a yellow color. A legend (Fig. 2) is provided within the scorecard to aid in the interpretation of these results. Governance indicators are represented simply by red or green. The color is defined based on what literature shows to be a negative (red) or positive (green) factor for a reserve (S3 Table). For example, if the perceived degree of illegal fishing is high, this indicator will be assigned a red color. However, due to the nature of some governance indicators, which require the user to provide a narrative, only some indicators are presented in the scorecard (although all are included in the technical report).
 
 **Fig 2. Legend used to interpret the scorecard produced by MAREA.** Colors indicate direction of change (red = negative; green = positive), and color intensity is given by the statistical significance.
 
@@ -220,7 +220,7 @@ landings <- read.csv("Data/natividad_landings_conapesca.csv", stringsAsFactors =
 
 While MAREA is a general tool that can be easily employed to evaluate the effectiveness of any marine reserve with the required input data, we illustrate its use here by applying it to one marine reserve near Isla Natividad, in Baja California Sur, Mexico. Isla Natividad is located 8 Km off the Pacific Coast of the Baja California Peninsula (Fig. 3), where fishers operate under a fishing cooperative (*S.C.P.P. Buzos y Pescadores de la Baja California*) that promotes co-management of marine resources [@mccay_2017-1m; @mccay_2014-CN]. Additionally, fishers have Territorial Use Rights for Fisheries (TURFs) that provide them with exclusive access rights to exploit the benthic marine resources within a given perimeter [@mccay_2014-CN].
 
-**Fig 3. General location of Isla Natividad (left) and map of the island (right).** The marine reserve polygon is indicated in red, and the approximate location of control sites is indicated by blue squares (B = Babencho, D = La Dulce). Shapefiles for Mexican coastline and the United States were obtained from INEGI @[INEGI] and the tmap R package [@tmap_2017], respectively.
+**Fig 3. General location of Isla Natividad (left) and map of the island (right).** The marine reserve polygon is indicated in red, and the approximate location of control sites is indicated by blue squares (B = Babencho, D = La Dulce). Shapefiles for Mexican coastline and the United States were obtained from INEGI [@INEGI] and the tmap R package [@tmap_2017], respectively.
 
 ```{r map}
 proj <- CRS("+proj=longlat +datum=NAD27")
