--- a/exported-references.bib
+++ b/exported-references.bib
@@ -3162,3 +3162,11 @@ pmid = {12522241},
 f1000-projects = {TURFeffect},
 abstract = {In the Pacific Ocean, air and ocean temperatures, atmospheric carbon dioxide, landings of anchovies and sardines, and the productivity of coastal and open ocean ecosystems have varied over periods of about 50 years. In the mid-1970s, the Pacific changed from a cool "anchovy regime" to a warm "sardine regime." A shift back to an anchovy regime occurred in the middle to late 1990s. These large-scale, naturally occurring variations must be taken into account when considering human-induced climate change and the management of ocean living resources.}
 }
+
+@online{INEGI,
+title = {Marco Geoestadistico Nacional},
+author = {Instituto Nacional de Estadistica Geografia e Informatica de Mexico},
+url = {www.inegi.org.mx/geo/contenidos/geoestadistica/m_geoestadistico.aspx},
+year = 2017,
+urldate = {2017-12-10}
+}
