--- a/plostemplate/ManuscriptPLOS.tex
+++ b/plostemplate/ManuscriptPLOS.tex
@@ -656,6 +656,456 @@ We thank Olivier Deschenes and Andrew Plantinga, who provided valuable input to 
 
 \nolinenumbers
 
-\bibliography{exported-references}
+% \bibliography{exported-references}
+\begin{thebibliography}{10}
+
+\bibitem{pauly_2005-qV}
+Pauly D, Watson R, Alder J.
+\newblock Global trends in world fisheries: impacts on marine ecosystems and
+  food security.
+\newblock Philosophical Transactions of the Royal Society B: Biological
+  Sciences. 2005;360(1453):5--12.
+\newblock doi:{10.1098/rstb.2004.1574}.
+
+\bibitem{halpern_2008-dK}
+Halpern BS, Walbridge S, Selkoe KA, Kappel CV, Micheli F, D'Agrosa C, et~al.
+\newblock A global map of human impact on marine ecosystems.
+\newblock Science. 2008;319(5865):948--952.
+\newblock doi:{10.1126/science.1149345}.
+
+\bibitem{lester_2008-F_}
+Lester S, Halpern B.
+\newblock Biological responses in marine no-take reserves versus partially
+  protected areas.
+\newblock Mar Ecol Prog Ser. 2008;367:49--56.
+\newblock doi:{10.3354/meps07599}.
+
+\bibitem{lester_2009-Ks}
+Lester S, Halpern B, Grorud-Colvert K, Lubchenco J, Ruttenberg B, Gaines S,
+  et~al.
+\newblock Biological effects within no-take marine reserves: a global
+  synthesis.
+\newblock Mar Ecol Prog Ser. 2009;384:33--46.
+\newblock doi:{10.3354/meps08029}.
+
+\bibitem{sala_2016-PV}
+Sala E, Costello C, De~Bourbon~Parme J, Fiorese M, Heal G, Kelleher K, et~al.
+\newblock Fish banks: An economic model to scale marine conservation.
+\newblock Marine Policy. 2016;73:154--161.
+\newblock doi:{10.1016/j.marpol.2016.07.032}.
+
+\bibitem{hastings_2017-sm}
+Hastings A, Gaines SD, Costello C.
+\newblock Marine reserves solve an important bycatch problem in fisheries.
+\newblock Proc Natl Acad Sci USA. 2017;114(34):8927--8934.
+\newblock doi:{10.1073/pnas.1705169114}.
+
+\bibitem{aburtooropeza_2011-ya}
+Aburto-Oropeza O, Erisman B, Galland GR, Mascareñas-Osorio I, Sala E, Ezcurra
+  E.
+\newblock Large Recovery of Fish Biomass in a No-Take Marine Reserve.
+\newblock PLoS ONE. 2011;6(8):e23601.
+\newblock doi:{10.1371/journal.pone.0023601}.
+
+\bibitem{micheli_2012-EU}
+Micheli F, Saenz-Arroyo A, Greenley A, Vazquez L, Espinoza~Montes JA, Rossetto
+  M, et~al.
+\newblock Evidence that marine reserves enhance resilience to climatic impacts.
+\newblock PLoS ONE. 2012;7(7):e40832.
+\newblock doi:{10.1371/journal.pone.0040832}.
+
+\bibitem{roberts_2017-J9}
+Roberts CM, OLeary BC, McCauley DJ, Cury PM, Duarte CM, Lubchenco J, et~al.
+\newblock Marine reserves can mitigate and promote adaptation to climate
+  change.
+\newblock Proc Natl Acad Sci USA. 2017;114(24):6167--6175.
+\newblock doi:{10.1073/pnas.1701262114}.
+
+\bibitem{munguavega_2015-yg}
+Munguía-Vega A, Sáenz-Arroyo A, Greenley AP, Espinoza-Montes JA, Palumbi SR,
+  Rossetto M, et~al.
+\newblock Marine reserves help preserve genetic diversity after impacts derived
+  from climate variability: Lessons from the pink abalone in Baja California.
+\newblock Global Ecology and Conservation. 2015;4:264--276.
+\newblock doi:{10.1016/j.gecco.2015.07.005}.
+
+\bibitem{edgar_2014-UO}
+Edgar GJ, Stuart-Smith RD, Willis TJ, Kininmonth S, Baker SC, Banks S, et~al.
+\newblock Global conservation outcomes depend on marine protected areas with
+  five key features.
+\newblock Nature. 2014;506(7487):216--220.
+\newblock doi:{10.1038/nature13022}.
+
+\bibitem{giakoumi_2017-V2}
+Giakoumi S, Scianna C, Plass-Johnson J, Micheli F, Grorud-Colvert K, Thiriet P,
+  et~al.
+\newblock Ecological effects of full and partial protection in the crowded
+  Mediterranean Sea: a regional meta-analysis.
+\newblock Sci Rep. 2017;7(1):8940.
+\newblock doi:{10.1038/s41598-017-08850-w}.
+
+\bibitem{sala_2017-69}
+Sala E, Giakoumi S.
+\newblock No-take marine reserves are the most effective protected areas in the
+  ocean.
+\newblock ICES Journal of Marine Science. 2017;doi:{10.1093/icesjms/fsx059}.
+
+\bibitem{betti_2017-lq}
+Betti F, Bavestrello G, Bo M, Asnaghi V, Chiantore M, Bava S, et~al.
+\newblock Over 10 years of variation in Mediterranean reef benthic
+  communities.
+\newblock Marine Ecology. 2017;38(3):e12439.
+\newblock doi:{10.1111/maec.12439}.
+
+\bibitem{szuwalski_2017-jc}
+Szuwalski CS, Burgess MG, Costello C, Gaines SD.
+\newblock High fishery catches through trophic cascades in China.
+\newblock Proc Natl Acad Sci USA. 2017;114(4):717--721.
+\newblock doi:{10.1073/pnas.1612722114}.
+
+\bibitem{chavez_2003-mm}
+Chavez FP.
+\newblock From anchovies to sardines and back: multidecadal change in the
+  pacific ocean.
+\newblock Science. 2003;299(5604):217--221.
+\newblock doi:{10.1126/science.1075880}.
+
+\bibitem{davies_2017-ml}
+Davies TK, Mees CC, Milner-Gulland EJ.
+\newblock Use of a counterfactual approach to evaluate the effect of area
+  closures on fishing location in a tropical tuna fishery.
+\newblock PLoS ONE. 2017;12(3):e0174758.
+\newblock doi:{10.1371/journal.pone.0174758}.
+
+\bibitem{guidetti_2014-8Z}
+Guidetti P, Baiata P, Ballesteros E, Di~Franco A, Hereu B, Macpherson E, et~al.
+\newblock Large-Scale Assessment of Mediterranean Marine Protected Areas
+  Effects on Fish Assemblages.
+\newblock PLoS ONE. 2014;9(4):e91841.
+\newblock doi:{10.1371/journal.pone.0091841}.
+
+\bibitem{friedlander_2017-oI}
+Friedlander AM, Golbuu Y, Ballesteros E, Caselle JE, Gouezo M, Olsudong D,
+  et~al.
+\newblock Size, age, and habitat determine effectiveness of Palau's Marine
+  Protected Areas.
+\newblock PLoS ONE. 2017;12(3):e0174787.
+\newblock doi:{10.1371/journal.pone.0174787}.
+
+\bibitem{rodriguez_2017-PD}
+Rodriguez AG, Fanning LM.
+\newblock Assessing Marine Protected Areas Effectiveness: A Case Study with the
+  Tobago Cays Marine Park.
+\newblock OJMS. 2017;07(03):379--408.
+\newblock doi:{10.4236/ojms.2017.73027}.
+
+\bibitem{moland_2013-VP}
+Moland E, Olsen EM, Knutsen H, Garrigou P, Espeland SH, Kleiven AR, et~al.
+\newblock Lobster and cod benefit from small-scale northern marine protected
+  areas: inference from an empirical before-after control-impact study.
+\newblock Proceedings of the Royal Society B: Biological Sciences.
+  2013;280(1754):20122679--20122679.
+\newblock doi:{10.1098/rspb.2012.2679}.
+
+\bibitem{soykan_2015-nu}
+Soykan CU, Lewison RL.
+\newblock Using community-level metrics to monitor the effects of marine
+  protected areas on biodiversity.
+\newblock Conserv Biol. 2015;29(3):775--783.
+\newblock doi:{10.1111/cobi.12445}.
+
+\bibitem{pomeroy_2005-Py}
+Pomeroy RS, Watson LM, Parks JE, Cid GA.
+\newblock How is your MPA doing? A methodology for evaluating the management
+  effectiveness of marine protected areas.
+\newblock Ocean Coast Manag. 2005;48(7-8):485--502.
+\newblock doi:{10.1016/j.ocecoaman.2005.05.004}.
+
+\bibitem{pomeroy_2004-23}
+Pomeroy RS, Parks JE, Watson LM.
+\newblock How is your MPA doing ? A guidebook of natural and social indicators
+  for evaluating marine protected areas management effectiveness.
+\newblock IUCN; 2004.
+\newblock Available from:
+  \url{http://www.iucn.org/dbtw-wpd/html/PAPS-012/cover.html}.
+
+\bibitem{mascia_2017-m_}
+Mascia MB, Fox HE, Glew L, Ahmadia GN, Agrawal A, Barnes M, et~al.
+\newblock A novel framework for analyzing conservation impacts: evaluation,
+  theory, and marine protected areas.
+\newblock Ann N Y Acad Sci. 2017;1399(1):93--115.
+\newblock doi:{10.1111/nyas.13428}.
+
+\bibitem{ostrom_2009-hg}
+Ostrom E.
+\newblock A General Framework for Analyzing Sustainability of Social-Ecological
+  Systems.
+\newblock Science. 2009;325(5939):419--422.
+\newblock doi:{10.1126/science.1172133}.
+
+\bibitem{basurto_2013-oq}
+Basurto X, Gelcich S, Ostrom E.
+\newblock The social–ecological system framework as a knowledge
+  classificatory system for benthic small-scale fisheries.
+\newblock Global Environmental Change. 2013;23(6):1366--1380.
+\newblock doi:{10.1016/j.gloenvcha.2013.08.001}.
+
+\bibitem{lowndes_2017-xh}
+Lowndes JSS, Best BD, Scarborough C, Afflerbach JC, Frazier MR, OHara CC,
+  et~al.
+\newblock Our path to better science in less time using open data science
+  tools.
+\newblock Nat ecol evol. 2017;1(6):0160.
+\newblock doi:{10.1038/s41559-017-0160}.
+
+\bibitem{halpern_2012-k9}
+Halpern BS, Longo C, Hardy D, McLeod KL, Samhouri JF, Katona SK, et~al.
+\newblock An index to assess the health and benefits of the global ocean.
+\newblock Nature. 2012;488(7413):615--620.
+\newblock doi:{10.1038/nature11397}.
+
+\bibitem{halpern_2017-Zi}
+Halpern BS, Frazier M, Afflerbach J, OHara C, Katona S, Stewart~Lowndes JS,
+  et~al.
+\newblock Drivers and implications of change in global ocean health over the
+  past five years.
+\newblock PLoS ONE. 2017;12(7):e0178267.
+\newblock doi:{10.1371/journal.pone.0178267}.
+
+\bibitem{selig_2015-F9}
+Selig ER, Frazier M, O'Leary JK, Jupiter SD, Halpern BS, Longo C, et~al.
+\newblock Measuring indicators of ocean health for an island nation: The ocean
+  health index for Fiji.
+\newblock Ecosystem Services. 2015;16:403--412.
+\newblock doi:{10.1016/j.ecoser.2014.11.007}.
+
+\bibitem{halpern_2014-lQ}
+Halpern BS, Longo C, Scarborough C, Hardy D, Best BD, Doney SC, et~al.
+\newblock Assessing the Health of the U.S. West Coast with a Regional-Scale
+  Application of the Ocean Health Index.
+\newblock PLoS ONE. 2014;9(6):e98995.
+\newblock doi:{10.1371/journal.pone.0098995}.
+
+\bibitem{elfes_2014-RC}
+Elfes CT, Longo C, Halpern BS, Hardy D, Scarborough C, Best BD, et~al.
+\newblock A Regional-Scale Ocean Health Index for Brazil.
+\newblock PLoS ONE. 2014;9(4):e92589.
+\newblock doi:{10.1371/journal.pone.0092589}.
+
+\bibitem{anderson_2015-ND}
+Anderson JL, Anderson CM, Chu J, Meredith J, Asche F, Sylvia G, et~al.
+\newblock The fishery performance indicators: A management tool for triple
+  bottom line outcomes.
+\newblock PLoS ONE. 2015;10(5):e0122809.
+\newblock doi:{10.1371/journal.pone.0122809}.
+
+\bibitem{dowling_2016-pO}
+Dowling N, Wilson J, Rudd M, Babcock E, Caillaux M, Cope J, et~al.
+\newblock FishPath: A Decision Support System for Assessing and Managing Data-
+  and Capacity- Limited Fisheries.
+\newblock In: Quinn~II T, Armstrong J, Baker M, Heifetz J, Witherell D,
+  editors. Assessing and Managing Data-Limited Fish Stocks. Alaska Sea Grant,
+  University of Alaska Fairbansk; 2016.Available from:
+  \url{https://seagrant.uaf.edu/bookstore/pubs/item.php?id=12335}.
+
+\bibitem{oyanedel_2017-TO}
+Oyanedel R, Macy~Humberstone J, Shattenkirk K, Rodriguez Van-Dyck S, Joye~Moyer
+  K, Poon S, et~al.
+\newblock A decision support tool for designing TURF-reserves.
+\newblock BMS. 2017;93(1):155--172.
+\newblock doi:{10.5343/bms.2015.1095}.
+
+\bibitem{vilela_2017-Zo}
+Vilela T, Reid J.
+\newblock Improving hydropower choices via an online and open access tool.
+\newblock PLoS ONE. 2017;12(6):e0179393.
+\newblock doi:{10.1371/journal.pone.0179393}.
+
+\bibitem{burgess_2018-HN}
+Burgess MG, Clemence M, McDermott GR, Costello C, Gaines SD.
+\newblock Five rules for pragmatic blue growth.
+\newblock Marine Policy. 2018;87:331--339.
+\newblock doi:{10.1016/j.marpol.2016.12.005}.
+
+\bibitem{nom}
+NOM-049-SAG/PESC.
+\newblock NORMA Oficial Mexicana NOM-049-SAG/PESC-2014, Que determina el
+  procedimiento para establecer zonas de refugio para los recursos pesqueros en
+  aguas de jurisdicción federal de los Estados Unidos Mexicanos.
+\newblock DOF. 2014;.
+
+\bibitem{lgeepa}
+LGEEPA.
+\newblock Ley General del Equilibrio Ecológico y la Protección al Ambiente.
+\newblock DOF. 2017;.
+
+\bibitem{lester_2017-nh}
+Lester S, McDonald G, Clemence M, Dougherty D, Szuwalski C.
+\newblock Impacts of TURFs and marine reserves on fisheries and conservation
+  goals: theory, empirical evidence, and modeling.
+\newblock BMS. 2017;93(1):173--198.
+\newblock doi:{10.5343/bms.2015.1083}.
+
+\bibitem{chirico_2017-Rz}
+Chirico AAD, McClanahan TR, Eklöf JS.
+\newblock Community- and government-managed marine protected areas increase
+  fish size, biomass and potential value.
+\newblock PLoS ONE. 2017;12(8):e0182342.
+\newblock doi:{10.1371/journal.pone.0182342}.
+
+\bibitem{rossetto_2015-V0}
+Rossetto M, Micheli F, Saenz-Arroyo A, Montes JAE, De~Leo GA.
+\newblock No-take marine reserves can enhance population persistence and
+  support the fishery of abalone.
+\newblock Can J Fish Aquat Sci. 2015;72(10):1503--1517.
+\newblock doi:{10.1139/cjfas-2013-0623}.
+
+\bibitem{woodcock_2017-Wm}
+Woodcock P, O'Leary BC, Kaiser MJ, Pullin AS.
+\newblock Your evidence or mine? Systematic evaluation of reviews of marine
+  protected area effectiveness.
+\newblock Fish Fish. 2017;18(4):668--681.
+\newblock doi:{10.1111/faf.12196}.
+
+\bibitem{carter_2017-Uf}
+Carter AB, Davies CR, Emslie MJ, Mapstone BD, Russ GR, Tobin AJ, et~al.
+\newblock Reproductive benefits of no-take marine reserves vary with region for
+  an exploited coral reef fish.
+\newblock Sci Rep. 2017;7(1):9693.
+\newblock doi:{10.1038/s41598-017-10180-w}.
+
+\bibitem{villaseorderbez2017-xE}
+Villaseñor-Derbez JC, Faro C, Wright M, Martínez J.
+\newblock A guide to evaluate the effectiveness of no-take marine reserves in
+  Mexico.
+\newblock TURFeffect; 2017.
+\newblock Available from:
+  \url{https://www.researchgate.net/publication/317840581\_A\_guide\_to\_evaluate\_the\_effectiveness\_of\_no-take\_marine\_reserves\_in\_Mexico}.
+
+\bibitem{ferraro_2006-oW}
+Ferraro PJ, Pattanayak SK.
+\newblock Money for nothing? A call for empirical evaluation of biodiversity
+  conservation investments.
+\newblock PLoS Biol. 2006;4(4):e105.
+\newblock doi:{10.1371/journal.pbio.0040105}.
+
+\bibitem{oecd_2017-VV}
+OECD. Inflation {CPI}; 2017.
+\newblock Available from: \url{https://data.oecd.org/price/inflation-cpi.htm}.
+
+\bibitem{zeileis_2004-7n}
+Zeileis A.
+\newblock Econometric Computing with HC and HAC Covariance Matrix Estimators.
+\newblock J Stat Softw. 2004;11(10).
+\newblock doi:{10.18637/jss.v011.i10}.
+
+\bibitem{espinosaromero_2014-PY}
+Espinosa-Romero MJ, Rodriguez LF, Weaver AH, Villanueva-Aznar C, Torre J.
+\newblock The changing role of NGOs in Mexican small-scale fisheries: From
+  environmental conservation to multi-scale governance.
+\newblock Marine Policy. 2014;50:290--299.
+\newblock doi:{10.1016/j.marpol.2014.07.005}.
+
+\bibitem{rcore_2017}
+{R Core Team}. R: A Language and Environment for Statistical Computing; 2017.
+\newblock Available from: \url{https://www.R-project.org/}.
+
+\bibitem{shiny_2017}
+Chang W, Cheng J, Allaire J, Xie Y, McPherson J. shiny: Web Application
+  Framework for R; 2017.
+\newblock Available from: \url{https://CRAN.R-project.org/package=shiny}.
+
+\bibitem{shinydashboard_2017}
+Chang W, {Borges Ribeiro} B. shinydashboard: Create Dashboards with 'Shiny';
+  2017.
+\newblock Available from:
+  \url{https://CRAN.R-project.org/package=shinydashboard}.
+
+\bibitem{rmarkdown_2017}
+Allaire J, Cheng J, Xie Y, McPherson J, Chang W, Allen J, et~al.. rmarkdown:
+  Dynamic Documents for R; 2017.
+\newblock Available from: \url{https://CRAN.R-project.org/package=rmarkdown}.
+
+\bibitem{knitr_2017}
+Xie Y. knitr: A General-Purpose Package for Dynamic Report Generation in R;
+  2017.
+\newblock Available from: \url{http://yihui.name/knitr/}.
+
+\bibitem{mccay_2017-1m}
+McCay B.
+\newblock Territorial use rights in fisheries of the northern Pacific coast of
+  Mexico.
+\newblock BMS. 2017;93(1):69--81.
+\newblock doi:{10.5343/bms.2015.1091}.
+
+\bibitem{mccay_2014-CN}
+McCay BJ, Micheli F, Ponce-Díaz G, Murray G, Shester G, Ramirez-Sanchez S,
+  et~al.
+\newblock Cooperatives, concessions, and co-management on the Pacific coast of
+  Mexico.
+\newblock Marine Policy. 2014;44:49--59.
+\newblock doi:{10.1016/j.marpol.2013.08.001}.
+
+\bibitem{INEGI}
+de~Estadistica Geografia e Informatica~de Mexico IN. Marco Geoestadistico
+  Nacional; 2017.
+\newblock Available from:
+  \url{www.inegi.org.mx/geo/contenidos/geoestadistica/m_geoestadistico.aspx}.
+
+\bibitem{tmap_2017}
+Tennekes M. tmap: Thematic Maps; 2017.
+\newblock Available from: \url{https://CRAN.R-project.org/package=tmap}.
+
+\bibitem{afflerbach_2014-HP}
+Afflerbach JC, Lester SE, Dougherty DT, Poon SE.
+\newblock A global survey of TURF-reserves, Territorial Use Rights for
+  Fisheries coupled with marine reserves.
+\newblock Global Ecology and Conservation. 2014;2:97--106.
+\newblock doi:{10.1016/j.gecco.2014.08.001}.
+
+\bibitem{suman_2010-ez}
+Suman CS, Saenz-Arroyo A, Dawson C, Luna MC.
+\newblock Manual de Instruccion de Reef Check California: Guia de instruccion
+  para el monitoreo del bosque de sargazo en la Peninsula de Baja California.
+\newblock Pacific Palisades, CA, USA: Reef Check Foundation; 2010.
+
+\bibitem{gutirrez_2011-0U}
+Gutiérrez NL, Hilborn R, Defeo O.
+\newblock Leadership, social capital and incentives promote successful
+  fisheries.
+\newblock Nature. 2011;470(7334):386--389.
+\newblock doi:{10.1038/nature09689}.
+
+\bibitem{finkbeiner_2015-87}
+Finkbeiner EM, Basurto X.
+\newblock Re-defining co-management to facilitate small-scale fisheries reform:
+  An illustration from northwest Mexico.
+\newblock Marine Policy. 2015;51:433--441.
+\newblock doi:{10.1016/j.marpol.2014.10.010}.
+
+\bibitem{ball_2009}
+Ball IR, Possingham HP, Watts ME.
+\newblock Marxan and relatives Software for spatial conservation
+  prioritization.
+\newblock In: Moilanen A, Wilson KA, Possingham HP, editors. Spatial
+  conservation prioritization. Quantitative methods and computational tools.
+  United Kingdom: Oxford University Press; 2009. p. 185--195.
+\newblock Available from:
+  \url{https://espace.library.uq.edu.au/view/UQ:200259}.
+
+\bibitem{padleton_2017-vn}
+Padleton LH, Aghmadia GN, Browman HI, Thurstand RH, Kaplan DM, Bartolino V.
+\newblock Debating the effectiveness of marine protected areas.
+\newblock ICES Journal of Marine Science. 2017;doi:{10.1093/icesjms/fsx154}.
+
+\bibitem{lundquist_2005-OL}
+Lundquist CJ, Granek EF.
+\newblock Strategies for successful marine conservation: integrating
+  socioeconomic, political, and scientific factors.
+\newblock Conserv Biol. 2005;19(6):1771--1778.
+\newblock doi:{10.1111/j.1523-1739.2005.00279.x}.
+
+\end{thebibliography}
+
 
 \end{document}
